--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
   <!-- Include the fireworks.js library -->
   <script src="https://cdn.jsdelivr.net/npm/fireworks.js@1.0.0/dist/fireworks.min.js"></script>
   <!-- Include the countdown timer and fireworks display script -->
-  <script src="./countdown-timer.js"></script>
+  <script src="https://github.com/Jonas2401/New-Year/blob/main/countdown-fireworks-script.js"></script>
 </body>
 </html>
