--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
+      color: black;
     }
 
     /* Add some styling for the countdown timer */
     .countdown__time {
       font-size: 2em;
       font-weight: bold;
-      color: #333;
+      color: grey;
     }
   </style>
 </head>
